option('dbusmenu-gtk', type: 'feature', value: 'auto', description: 'Enable support for tray')
option('libcxx', type : 'boolean', value : false, description : 'Build with Clang\'s libc++ instead of libstdc++ on Linux.')
option('libinput', type: 'feature', value: 'auto', description: 'Enable libinput support for libinput related features')
option('libnl', type: 'feature', value: 'auto', description: 'Enable libnl support for network related features')
option('libudev', type: 'feature', value: 'auto', description: 'Enable libudev support for udev related features')
option('libevdev', type: 'feature', value: 'auto', description: 'Enable libevdev support for evdev related features')
option('pipewire', type: 'feature', value: 'auto', description: 'Enable support for pipewire')
option('logind', type: 'feature', value: 'auto', description: 'Enable support for logind')
option('wireplumber', type: 'feature', value: 'auto', description: 'Enable support for WirePlumber')
option('niri', type: 'boolean', description: 'Enable support for niri')